samples/errors/return-func-and-int.stkn
func conflict_return(x)
    if x
        return 0
    return conflict_return@1

write(conflict_return(false))
